# darknet

./: .gitignore  CMakeLists.txt  README.md  YoloCoreConfig.cmake.in
.github/workflows/: main.yml
cmake/: vcpkg-linux.diff  vcpkg_linux.diff  vcpkg_linux_cuda.diff  vcpkg_windows.diff  vcpkg_windows_cuda.diff
src/: .clang-format  activation_kernels.cu  activation_layer.c  activation_layer.cpp  activation_layer.h  activations.c  activations.h  avgpool_layer.c  avgpool_layer.cpp  avgpool_layer.h  avgpool_layer_kernels.cu  batchnorm_layer.c  batchnorm_layer.cpp  batchnorm_layer.h  blas.c  blas.h  blas_kernels.cu  box.c  box.cpp  box.h  col2im.c  col2im.h  col2im_kernels.cu  connected_layer.c  connected_layer.cpp  connected_layer.h  conv_lstm_layer.c  conv_lstm_layer.h  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.cpp  convolutional_layer.h  cost_layer.c  cost_layer.h  cpu_gemm.c  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  crop_layer_kernels.cu  (+106 more)
src/hungarian/: BipartiteGraph.cpp  BipartiteGraph.h  Hungarian.cpp  Hungarian.h  Matrix.h
